[package]
name = "render-typst"
version = "0.1.7"
edition = "2021"
repository = "https://github.com/djakish/render-typst/"
keywords = ["typst", "wasm"]
description = "Render some typst in browser"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
typst = { git = "https://github.com/typst/typst.git", tag = "v0.9.0" }
typst-library = { git = "https://github.com/typst/typst.git", tag = "v0.9.0" }
comemo = "0.3"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = "z"
wasm-opt = ['-Oz']
lto = true
strip = true

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
omit-default-module-path = false