[package]
name = "render-typst"
version = "0.1.11"
edition = "2021"
repository = "https://github.com/djakish/render-typst/"
keywords = ["typst", "wasm"]
description = "Render some typst in browser"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
comemo = "0.4.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"
typst = "0.11.0"
typst-pdf = "0.11.0"
typst-svg = "0.11.0"
typst-render = "0.11.0"
serde-wasm-bindgen = "0.6.5"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = "z"
wasm-opt = ['-Oz']
lto = true
strip = true

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
omit-default-module-path = false
